# ghostfree

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  manifest.json  package-lock.json  package.json  server.json  tsconfig.json  tsconfig.test.json  tsup.config.ts  vitest.config.ts  vitest.integration.config.ts
.cursor/: mcp.json
src/: accepted-risks.ts  config.ts  dep-cache.ts  index.ts  severity.ts  types.ts
src/api/: kev.ts  nvd.ts  osv.ts
src/parsers/: index.ts
src/parsers/dotnet/: index.ts  parseCsproj.spec.md  parsePackagesConfig.spec.md
src/parsers/go/: index.ts  parseGoMod.spec.md  parseGoSum.spec.md
src/parsers/java/: index.ts  parseBuildGradle.spec.md  parsePomXml.spec.md
src/parsers/node/: index.ts  parsePackageJson.spec.md  parsePackageLockJson.spec.md
src/parsers/python/: index.ts  parsePipfileLock.spec.md  parsePyprojectToml.spec.md  (+2 more)
src/prompts/: scan.ts
src/tools/: accepted-risks-tools.ts  check-cves.ts  discover.ts  enrich-cve.ts
tests/: accepted-risks.test.ts  dep-cache.test.ts  severity.test.ts
tests/api/: kev.test.ts  nvd.test.ts  osv.test.ts
tests/fixtures/python/: pyproject.toml  requirements.txt  setup.cfg
tests/fixtures/rust/: Cargo.toml
tests/integration/: kev.integration.test.ts  nvd.integration.test.ts  osv.integration.test.ts  scan-flow.integration.test.ts
tests/parsers/: discover.test.ts  dotnet.test.ts  go.test.ts  java.test.ts  node.test.ts  parsers.test.ts  python.test.ts  rust.test.ts
tests/tools/: check-cves.test.ts
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
(+12 files in other folders)
