[project]
name = "myapp"
dependencies = [
    "httpx==0.24.0",
    "pydantic>=2.0.0",
    "requests[security]~=2.28.0",
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = { version = "0.22.0", extras = ["standard"] }
# vrc-tilde
aiohttp = "~0.9.0"
# vrc-compound
starlette = ">=0.27,<0.28"
# vrc-exclusion
legacy-pkg = "!=1.0.0"
# vrc-upper-bound-only
ceiling-pkg = "<4.0"
# vrc-caret + vrc-prerelease
beta-pkg = "^2.0.0-alpha.1"
