[metadata]
name = myapp
version = 1.0.0
description = A sample application
author = Jane Developer

[options]
python_requires = >=3.9
install_requires =
    requests>=2.28.0
    flask==2.3.0
    sqlalchemy==2.0.20
    celery>=5.3.0,<6.0.0
    # vrc-exact + vrc-prerelease
    pre-pkg==1.0.0-beta
    # vrc-compatible-release
    compat-pkg~=3.0
    # vrc-exclusive-minimum
    gt-pkg>1.5

[options.extras_require]
dev =
    pytest==7.4.0
    black==23.7.0
